--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -26,11 +26,12 @@
     "checkJs": true,
     "noEmit": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "moduleResolution": "node",
@@ -38,5 +39,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
   },
-  "exclude": ["node_modules", "dist", "playground"],
+  // "exclude": ["node_modules", "dist", "playground"],
 }
