--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "window.title": "---NPM-PACKAGE---",
+  "window.title": "@nkp/blobber",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
